--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap');
 
+:root{
+    --primary-color: #047aed;
+}
 * {
     box-sizing: border-box;
     padding: 0;
@@ -34,9 +37,9 @@ p {
 img {
     width: 100%;
 }
-
+/* Navbar */
 .navbar {
-    background-color: #047aed;
+    background-color: var(--primary-color);
     color: white;
     height: 70px;
 }
@@ -59,6 +62,23 @@ img {
     justify-content: space-between;
 }
 
+/* Showcase */
+.showcase {
+    height: 100px;
+    background-color: var(--primary-color)!important;
+    color: white;
+    position: relative;
+}
+
+.showcase h1 {
+    font-size: 40px;
+}
+
+.showcase p {
+    margin: 20px 0;
+}
+
+/* Utilities */
 .container {
     max-width: 1100px;
     margin: 0 auto;
@@ -71,4 +91,9 @@ img {
     justify-content: center;
     align-items: center;
     height: 100%;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 300px 200px;
 }
