--- a/CSS/style.css
+++ b/CSS/style.css
@@ -112,6 +112,21 @@ img {
     outline: none;
 }
 
+.showcase::before,
+.showcase::after {
+    content:'';
+    position: absolute;
+    height: 100px;
+    bottom: -70px;
+    right: 0;
+    left: 0;
+    background-color: white;
+    transform: skewY(-2deg);
+    -webkit-transform: skewY(-2deg);
+    -moz-transform: skewY(-2deg);
+    -ms-transform: skewY(-2deg);
+}
+
 /* Utilities */
 .container {
     max-width: 1100px;
@@ -127,6 +142,25 @@ img {
     box-shadow: 0 3px 10px rgba(0,0,0,0.2);
     padding: 20px;
     margin: 10px;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 30px;
+    cursor: pointer;
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+.btn-outline {
+    background-color: transparent;
+    border: 1px white solid;
+}
+
+.btn:hover {
+    transform: scale(.98);
 }
 
 .flex {
