--- a/CSS/style.css
+++ b/CSS/style.css
@@ -132,5 +132,16 @@ img {
     padding-top: 100px;
 }
 
+.stats-heading {
+    max-width: 500px;
+    margin: auto;
+}
 
-/* Utilities */
+.stats .grid h3 {
+    font-size: 35px;
+}
+
+.stats .grid p {
+    font-size: 20px;
+    font-weight: bold;
+}
