Ended: Footer - Starting: Media querries

--- a/CSS/utilities.css
+++ b/CSS/utilities.css
@@ -55,6 +55,18 @@
     color: black;
 }
 
+.bg-primary a,
+.btn-primary a,
+.bg-secondary a,
+.btn-secondary a,
+.bg-dark a,
+.btn-dark a {
+    color: white;
+}
+
+
+
+
 /* Text sizes */
 .lead {
     font-size: 20px;
