--- a/CSS/style.css
+++ b/CSS/style.css
@@ -184,3 +184,8 @@ img {
 .languages .card:hover {
     transform: translateY(-15px);
 }
+
+/* Footer */
+.footer .social a{
+    margin: 0px 10px;
+}
