--- a/CSS/style.css
+++ b/CSS/style.css
@@ -185,6 +185,34 @@ img {
     transform: translateY(-15px);
 }
 
+/* Features */
+.features-head img{
+    width: 200px;
+    justify-self: flex-end;
+}
+
+.features-sub-head img {
+    width: 300px;
+    justify-self: flex-end;
+}
+
+/* Features-main */
+.features-main .card > i {
+    margin-right: 20px;
+}
+
+.features-main .grid {
+    padding: 30px;
+}
+
+.features-main .grid > *:first-child {
+    grid-column: 1 / span 3;
+}
+
+.features-main .grid > *:nth-child(2) {
+    grid-column: 1 / span 2;
+}
+
 /* Footer */
 .footer .social a{
     margin: 0px 10px;
@@ -237,3 +265,4 @@ img {
         background-color: rgba(0, 0, 0, 0.1);
     }
 }
+
